--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -32,7 +32,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20.11.0
-          registry-url: 'https://npm.pkg.github.com/'
+      - name: Configure npm for GitHub Packages
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
+          echo "registry=https://npm.pkg.github.com/" >> ~/.npmrc
       - name: Install dependencies for server
         run: npm ci
         working-directory: ./server
