--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -15,10 +15,10 @@ jobs:
           node-version: 20.11.0
       - name: Install dependencies for server
         run: npm ci
-        working-directory: ./basisTraining/server
+        working-directory: ./server
       - name: Install dependencies for client
         run: npm ci
-        working-directory: ./basisTraining/client
+        working-directory: ./client
 
   publish-gpr:
     needs: build
@@ -38,12 +38,12 @@ jobs:
           echo "registry=https://npm.pkg.github.com/" >> ~/.npmrc
       - name: Install dependencies for server
         run: npm ci
-        working-directory: ./basisTraining/server
+        working-directory: ./server
       - name: Install dependencies for client
         run: npm ci
-        working-directory: ./basisTraining/client
+        working-directory: ./client
       - name: Publish package
-        run: npm publish --registry=https://npm.pkg.github.com/
-        working-directory: ./basisTraining/server
+        run: npm publish
+        working-directory: ./server
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
