--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "bulma": "^1.0.1",
     "chart.js": "^4.4.3",
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
@@ -49,8 +47,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/preset-env": "^7.24.6"
+    "eslint-config-react-app": "^7.0.1"
   }
 }
