--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
           npm config set registry https://npm.pkg.github.com/
+      - name: Verify npm registry configuration
+        run: npm config get registry
       - name: Install dependencies for server
         run: npm ci
         working-directory: ./server
@@ -48,4 +50,4 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Restore default npm registry
-        run: npm config set registry https://registry.npmjs.org
+        run: npm config set registry https://registry.npmjs.org/
