--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
     "winston": "^3.13.0"
   },
   "devDependencies": {
