--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -36,16 +36,16 @@ jobs:
         run: |
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
           npm config set registry https://npm.pkg.github.com/
-      - name: Verify npm registry configuration
-        run: npm config get registry
       - name: Install dependencies for server
         run: npm ci
         working-directory: ./server
       - name: Install dependencies for client
         run: npm ci
         working-directory: ./client
+      - name: Reset npm registry to default
+        run: npm config set registry https://registry.npmjs.org/
       - name: Publish package to GitHub Packages
-        run: npm publish
+        run: npm publish --registry=https://npm.pkg.github.com/
         working-directory: ./server
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
