--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "@josefcohen96/server",
   "version": "1.0.0",
   "description": "A brief description of your package",
   "main": "server.js",
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/josefcohen96/basisTraining.git"
   },
   "keywords": [],
-  "author": "Your Name",
+  "author": "Josef Cohen",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/josefcohen96/basisTraining/issues"
@@ -31,5 +31,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
