--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.3",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -20,6 +21,7 @@
     "react-pdf": "^9.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-signature-canvas": "^1.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
