--- a/server/.env
+++ b/server/.env
@@ -1,22 +1,13 @@
-DB_NAME=trainingDB
+DB_NAME=postgres
 DB_USER=postgres
 DB_PASS=1234
 DB_HOST=localhost
 DB_PORT=5432
 
-# const pool = new Pool({
-#   user: 'postgres',
-#   host: 'localhost',
-#   database: 'trainingDB',
-#   password: '1234',
-#   port: 5432,
-# });
 
-
-# const pool = new Pool({
-#   user: 'postgres',
-#   host: 'localhost',
-#   database: 'postgres',
-#   password: '1234',
-#   port: 5432,
-# });
+# //   user: 'postgres',
+# //   host: 'localhost',
+# //   database: 'postgres',
+# //   password: '1234',
+# //   port: 5432,
+# // });
